<resources>
    <string name="app_name">InternProject</string>
    <string name="action_settings">Settings</string>
    <string name="pg_sample">PG/Sample</string>
    <string name="submit">Submit</string>
    <string name="choose">Choose</string>
    <string name="product_group">Product Group</string>
    <string name="literature">Literature</string>
    <string name="physician_sample">Physician Sample</string>
    <string name="gift">Gift</string>
    <string name="accompanied_with">Accompanied with</string>
    <string name="remarks">Remarks</string>
    <string name="_00">00</string>
    <string name="intern_dcr">Intern DCR</string>
</resources>
